...
                )}
              />
            </Auth.Content>

            <Auth.Actions>
              <Button className="w-full" onPress={form.handleSubmit(onSubmit)}>
                <Button.Label>Send recovery link</Button.Label>
              </Button>
            </Auth.Actions>
          </Auth>
        </FormProvider>
      </SafeAreaView>
    </>
...
