...
                  </TextField>
                )}
              />
            </Auth.Content>
            <Auth.Actions className="flex-1">
              <Button className="w-full" onPress={form.handleSubmit(onSubmit)}>
                <Button.Label>Verify code</Button.Label>
              </Button>
              <Button className="w-full" variant="tertiary">
                <Button.Label>Resend a code</Button.Label>
              </Button>
            </Auth.Actions>
            <Auth.Actions>
              <Link asChild href="/demo/auth/forgot-password">
                <Button variant="ghost">
                  <Button.Label className="text-muted text-sm underline">Trouble accessing your account?</Button.Label>
                </Button>
              </Link>
            </Auth.Actions>
          </Auth>
        </FormProvider>
      </SafeAreaView>
...
