...
        </OnboardingSlider.Header>

        <OnboardingSlider.Items items={all} />

        <OnboardingSlider.Action asChild>
          <Button className="w-full rounded-full" size="lg" variant="primary">
            <Button.Label className="font-bold">{isLast ? "Get Started" : "Next"}</Button.Label>
          </Button>
        </OnboardingSlider.Action>
      </OnboardingSlider>
    </View>
  );
}
...
